--- a/vendir.yml
+++ b/vendir.yml
@@ -6,7 +6,7 @@ directories:
   - path: linkerd
     git:
       url: https://github.com/giantswarm/linkerd2-upstream
-      ref: giantswarm/main
+      ref: main
     includePaths:
     - charts/linkerd-control-plane/**/*
     - charts/linkerd-crds/**/*
