--- a/vendir.lock.yml
+++ b/vendir.lock.yml
@@ -2,10 +2,10 @@ apiVersion: vendir.k14s.io/v1alpha1
 directories:
 - contents:
   - git:
-      commitTitle: remove malformed yaml doc
-      sha: 267c734998cbed450619ae9c8508ef62efc2ee33
+      commitTitle: remove noop hack as it was introduced in upstream
+      sha: 2ad91ecf9719e27075434221ebea62189394c1a5
       tags:
-      - stable-2.10.1-2039-g267c73499
+      - stable-2.10.1-2139-g2ad91ecf9
     path: linkerd
   path: vendor
 kind: LockConfig
