Rename to linkerd-control-plane

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ workflows:
           executor: "app-build-suite"
           app_catalog: "giantswarm-catalog"
           app_catalog_test: "giantswarm-test-catalog"
-          chart: "linkerd2-app"
+          chart: "linkerd-control-plane"
           persist_chart_archive: true
           # Trigger job on git tag.
           filters:
