--- a/helm/linkerd2-app/values.yaml
+++ b/helm/linkerd2-app/values.yaml
@@ -349,6 +349,7 @@ proxyInjector:
       values:
       - kube-system
       - cert-manager
+      - giantswarm
 
   # -- Object selector used by admission webhook.
   objectSelector:
