Changes priority class to giantswarm-critical to improve chances to be correctly scheduled

--- a/helm/linkerd-control-plane/values.yaml
+++ b/helm/linkerd-control-plane/values.yaml
@@ -58,7 +58,7 @@ podAnnotations: {}
 # -- Additional labels to add to all pods
 podLabels: {}
 # -- Kubernetes priorityClassName for the Linkerd Pods
-priorityClassName: ""
+priorityClassName: "giantswarm-critical"
 # -- Runtime Class Name for all the pods
 runtimeClassName: ""
 
