sync repo with upstream
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/linkerd-control-plane/templates/destination.yaml
+++ b/helm/linkerd-control-plane/templates/destination.yaml
@@ -233,6 +233,7 @@ spec:
           runAsNonRoot: true
           runAsUser: {{.Values.controllerUID}}
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           seccompProfile:
             type: RuntimeDefault
       - args:
@@ -268,6 +269,7 @@ spec:
           runAsNonRoot: true
           runAsUser: {{.Values.controllerUID}}
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           seccompProfile:
             type: RuntimeDefault
         volumeMounts:
@@ -322,6 +324,7 @@ spec:
           runAsNonRoot: true
           runAsUser: {{.Values.controllerUID}}
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           seccompProfile:
             type: RuntimeDefault
         volumeMounts:
