--- a/helm/linkerd-control-plane/templates/heartbeat.yaml
+++ b/helm/linkerd-control-plane/templates/heartbeat.yaml
@@ -75,6 +75,7 @@ spec:
               runAsNonRoot: true
               runAsUser: {{.Values.controllerUID}}
               allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
               seccompProfile:
                 type: RuntimeDefault
 {{- end }}
