--- a/helm/linkerd-control-plane/templates/identity.yaml
+++ b/helm/linkerd-control-plane/templates/identity.yaml
@@ -192,6 +192,7 @@ spec:
           runAsNonRoot: true
           runAsUser: {{.Values.controllerUID}}
           allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
           seccompProfile:
             type: RuntimeDefault
         volumeMounts:
