--- a/helm/linkerd-control-plane/values.yaml
+++ b/helm/linkerd-control-plane/values.yaml
@@ -27,7 +27,7 @@ controlPlaneTracing: false
 # -- namespace to send control plane traces to
 controlPlaneTracingNamespace: linkerd-jaeger
 # -- control plane version. See Proxy section for proxy version
-linkerdVersion: stable-2.13.3
+linkerdVersion: stable-2.13.4
 # -- default kubernetes deployment strategy
 deploymentStrategy:
   rollingUpdate:
@@ -116,6 +116,12 @@ proxy:
   # -- Maximum time allowed for the proxy to establish an inbound TCP
   # connection
   inboundConnectTimeout: 100ms
+  # -- Maximum time allowed before an unused outbound discovery result
+  # is evicted from the cache
+  outboundDiscoveryCacheUnusedTimeout: "5s"
+  # -- Maximum time allowed before an unused inbound discovery result
+  # is evicted from the cache
+  inboundDiscoveryCacheUnusedTimeout: "90s"
   image:
     # -- Docker image for the proxy
     name: giantswarm/linkerd2-proxy
@@ -343,7 +349,6 @@ identity:
       # -- Key for the issuer certificate (ECDSA). It must be provided during
       # install
       keyPEM: |
-
 
 # -|- CPU, Memory and Ephemeral Storage resources required by the identity controller (see `proxy.resources` for sub-fields)
 identityResources:
