update changelog and default values
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/linkerd-control-plane/values.yaml
+++ b/helm/linkerd-control-plane/values.yaml
@@ -285,6 +285,9 @@ enableH2Upgrade: true
 # -- Add a PSP resource and bind it to the control plane ServiceAccounts. Note
 # PSP has been deprecated since k8s v1.21
 enablePSP: true
+global:
+  podSecurityStandards:
+    enforced: false
 
 # -- Failure policy for the proxy injector
 webhookFailurePolicy: Fail
