--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ workflows:
   package-and-push-chart-on-tag:
     jobs:
       - architect/push-to-app-catalog:
-          name: "package and push linkerd2 chart"
+          name: "package and push linkerd-control-plane chart"
           context: architect
           executor: "app-build-suite"
           app_catalog: "giantswarm-catalog"
@@ -20,11 +20,12 @@ workflows:
 
       - architect/run-tests-with-ats:
           name: execute chart tests
-          app-test-suite_container_tag: "0.2.3"
+          app-test-suite_version: "v0.4.1"
+          app-test-suite_container_tag: "0.4.1"
           filters:
             # Do not trigger the job on merge to main.
             branches:
               ignore:
                 - main
           requires:
-            - "package and push linkerd2 chart"
+            - "package and push linkerd-control-plane chart"
