--- a/helm/linkerd-control-plane/templates/podmonitor.yaml
+++ b/helm/linkerd-control-plane/templates/podmonitor.yaml
@@ -30,6 +30,9 @@ spec:
             - __meta_kubernetes_pod_container_name
           action: replace
           targetLabel: component
+        {{- with $podMonitor.relabelings }}
+        {{ toYaml . | nindent 8 }}
+        {{- end }}
 {{- end }}
 {{- if and $podMonitor.enabled $podMonitor.serviceMirror.enabled }}
 ---
@@ -64,6 +67,9 @@ spec:
             - __meta_kubernetes_pod_container_name
           action: replace
           targetLabel: component
+        {{- with $podMonitor.relabelings }}
+        {{ toYaml . | nindent 8 }}
+        {{- end }}
 {{- end }}
 {{- if and $podMonitor.enabled $podMonitor.proxy.enabled }}
 ---
