add VPA CRs to control-plane deployments
Signed-off-by: Matias Charriere <matias@giantswarm.io>

--- a/helm/linkerd-control-plane/values.yaml
+++ b/helm/linkerd-control-plane/values.yaml
@@ -584,3 +584,21 @@ podMonitor:
       sourceLabels:
       - __meta_kubernetes_pod_node_name
       targetLabel: node
+
+vpa:
+  enabled: true
+  proxyInjector:
+    minAllowed:
+      Cpu: 100m
+      Memory: 50Mi
+    maxAllowed: {}
+  destination:
+    minAllowed:
+      Cpu: 100m
+      Memory: 50Mi
+    maxAllowed: {}
+  identity:
+    minAllowed:
+      Cpu: 100m
+      Memory: 50Mi
+    maxAllowed: {}
